--- a/.github/workflows/mkdocs-deploy.yml
+++ b/.github/workflows/mkdocs-deploy.yml
@@ -13,5 +13,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
-      - run: pip install mkdocs-material 
-      - run: mkdocs gh-deploy --force --remote-branch site
+      - name: Install MkDocs and Theme
+        run: pip install mkdocs-material 
+      - name: Deploy to Site Branch
+        working-directory: ./src
+        run: mkdocs gh-deploy --force --remote-branch site
